src/test/ui/borrowck/borrowck-uninit-after-item.stderr
error[E0381]: binding `bar` isn't initialized
  --> $DIR/borrowck-uninit-after-item.rs:4:9
   |
LL |     let bar;
   |         --- variable declared here
LL |     fn baz(_x: isize) { }
LL |     baz(bar);
   |         ^^^ `bar` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
